[FIX] Diminished gap, moved header logo's to left

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ footer{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 25px;
 }
 
 .content{
@@ -134,7 +134,7 @@ footer{
 }
 
 .pl-12{
-    padding-left: 80px;
+    padding-right: 91px;
 }
 
 .col-30{
